<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.chooseexpences.ChooseExpencesFragment">
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"
        android:id="@+id/glStart"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/glStart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.1"
        android:text="@string/select_categories"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:id="@+id/tvCurrencies"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/glStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintVertical_bias="0.15"
        android:text="@string/choose_category_info"
        android:textSize="16sp"
        app:layout_constraintWidth_percent="0.7"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:text="@string/jkh"
        app:layout_constraintStart_toStartOf="@+id/fab"
        app:layout_constraintEnd_toEndOf="@+id/fab"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.34"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:fabSize="auto"
        android:id="@+id/fab"
        android:src="@drawable/category_bank_alt"
        app:tint = "@color/white"
        app:backgroundTint="@color/icon_inactive"
        android:foregroundGravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.15"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintHorizontal_bias="0.125"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:text="@string/allforhome"
        app:layout_constraintStart_toStartOf="@+id/fabAlpha"
        app:layout_constraintEnd_toEndOf="@+id/fabAlpha"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.34"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:fabSize="auto"
        android:id="@+id/fabAlpha"
        android:src="@drawable/category_home"
        app:tint = "@color/white"
        app:backgroundTint="@color/icon_inactive"
        android:foregroundGravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.15"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintHorizontal_bias="0.375"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:text="@string/selfcash"
        app:layout_constraintStart_toStartOf="@+id/fabSber"
        app:layout_constraintEnd_toEndOf="@+id/fabSber"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.34"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:fabSize="auto"
        android:id="@+id/fabSber"
        android:src="@drawable/category_cola"
        app:tint = "@color/white"
        app:backgroundTint="@color/icon_inactive"
        android:foregroundGravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.15"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintHorizontal_bias="0.625"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:text="@string/products"
        app:layout_constraintStart_toStartOf="@+id/fabTinkoff"
        app:layout_constraintEnd_toEndOf="@+id/fabTinkoff"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.34"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:fabSize="auto"
        android:id="@+id/fabTinkoff"
        android:src="@drawable/category_cart_alt"
        app:tint = "@color/white"
        app:backgroundTint="@color/icon_inactive"
        android:foregroundGravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.15"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintHorizontal_bias="0.875"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:cornerRadius="10dp"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHeight_percent="0.08"
        android:text="@string/finish"
        app:backgroundTint="@color/dot_selected"
        android:id="@+id/btnNext"
        />

</androidx.constraintlayout.widget.ConstraintLayout>