<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/standard_bottom_sheet"
    tools:context=".ui.fragments.choosecards.ChooseCardsFragment">
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1"
            android:id="@+id/glStart"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/glStart"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.05"
            app:layout_constraintHorizontal_bias="0.1"
            android:text="@string/select_currency"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:id="@+id/tvCurrencies"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/glStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintVertical_bias="0.15"
            android:text="@string/choose_info"
            android:textSize="16sp"
            app:layout_constraintWidth_percent="0.7"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintStart_toEndOf="@+id/glStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.27"
            android:id="@+id/llCurrencies"
            >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_weight="2.5"
                    android:id="@+id/tvTitle"
                    android:text="@string/choose_value"
                    />
                <TextView
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:id="@+id/tvCurrency"
                    android:layout_weight="0.25"
                    android:textAlignment="textEnd"
                    android:text="₽"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:src="@drawable/ic_baseline_navigate_next_24"
                    android:id="@+id/ivCurrencies"
                    />
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

